# tuiwindow

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: api.rs  area_calculation.rs  core.rs  hooks.rs  lib.rs  macros.rs  render.rs  sample_app.rs  tui.rs  utils.rs  window.rs
src/windows/: alerts.rs  menu.rs  mod.rs  page.rs  page_collection.rs  page_context.rs  window.rs
tests/: integration_test.rs
tuiwindow-macros/: Cargo.toml
tuiwindow-macros/src/: lib.rs
