workspace = { members = ["tuiwindow-macros"] }

[package]
name = "tuiwindow"
version = "0.1.0"
edition = "2021"
description = "A minimal window and focus manager for Ratatui+Crossterm TUI applications"
homepage = "https://github.com/untitled-/tuiwindow"
repository = "https://github.com/untitled-/tuiwindow"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["tui", "crossterm", "ratatui", "window", "gui"]
categories = ["command-line-utilities"]

[[bin]]
name = "example"
path = "src/sample_app.rs"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
uuid = { version = "1.7.0", features = ["v4"] }
tuiwindow-macros = {path = "./tuiwindow-macros/"}
